src/test/deca/syntax/invalid/cast/unclosed_parenthesis_around_value_11.Deca
// Description:
//    Tests a syntactically incorrect program for a cast expression missing parentheses around the value
//
// Results:
//    Line 11 : Error, expected '(' around the value.
//
// History:
//    created on 07/01/2025

{
    int a = (int) (10.5;
}